# ticktap

./: .gitignore  Cargo.toml  README.md  swagger.yaml
main_service/: Cargo.toml  swagger.yaml
main_service/src/: config.rs  controllers.rs  main.rs
main_service/src/controllers/: account_controller.rs  event_controller.rs  models.rs  services.rs  transaction_controller.rs
main_service/src/controllers/models/: account.rs  error.rs  event.rs  ticket.rs  transaction.rs
main_service/src/controllers/services/: account_service.rs  event_service.rs  repositories.rs  transaction_service.rs
main_service/src/controllers/services/repositories/: account_repository.rs  event_repository.rs  transaction_repository.rs
schema/: schema.sql
src/: config.rs
src/controllers/: account_controller.rs  services.rs
src/controllers/services/: account_service.rs
ticketing-service/: Cargo.toml  swagger.yaml
ticketing_service/: Cargo.toml  README.md  docker-compose.yml  swagger.yaml
ticketing_service/src/: config.rs  controllers.rs  main.rs
ticketing_service/src/controllers/: models.rs  services.rs  ticket_controller.rs
ticketing_service/src/controllers/models/: error.rs  event.rs  ticket.rs  transaction.rs
ticketing_service/src/controllers/services/: repositories.rs  ticket_service.rs
ticketing_service/src/controllers/services/repositories/: ticket_repository.rs
