[package]
name = "ticktap"
version = "0.1.0"
authors = ["Zachary Fanelle <zachary.fanelle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures = "0.3.12"
serde = "1.0.120"
serde_json = "1.0.61"
config = "0.10.1"
log = "0.4.14"
env_logger = "0.8.2"
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "mysql" ] }
typemap = "0.3.3"
derive_more = "0.99.11"